# game-of-life

./: .gitignore  CMakeLists.txt  Game.h  GameOfLife.cpp  GameOfLife.h  GameOfLifeExtensions.cpp  GameOfLifeExtensions.h  README.md  main.cpp
GameOfLife/: GameOfLife.cpp  GameOfLife.h
OpenGlGameOfLife/: Array3D.h  Game.cpp  Game.h  GameOfLifeExtensions.h
guilib/: Window.cpp  Window.h  glcall.cpp  glcall.h  libgui.h
mygl/: Buffer.cpp  Buffer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  SingleWindow.cpp  SingleWindow.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  glcall.cpp  glcall.h  mygl.cpp  mygl.h
shaders/: fragment.glsl  vertex.glsl
